--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
 
 </head>
 <body>
+<div class="wrapper">
+    <header>
+        <h1>Chess</h1>
+        <p>created by materials of the webinar "Создание web шахмат на HTML, JavaScript и PHP(13 янв. 2019 г.Евгений Волосатов )"</p>
+    </header>
+    <main>
 <div class="board"></div>
 <input class="buttonNew" type="button" value="New"/>
 <input class="buttonFlip" type="button" value="Flip"/>
+</main>
 
+<footer>
+    <p>&copy;</p>
+    <p id="date"></p>
+    <p class="small_text"><span>author :</span><span class="red"> Stepanov V</span></p>
+</footer>
 <script src="js/app.js"></script>
+</div>
 </body>
 </html>
